--- a/css/style.css
+++ b/css/style.css
@@ -21,28 +21,33 @@ h6 {
     font-weight: 700;
 }
 
-.topnav {
-    font-size: 14px;
-}
-
-.lead {
-    font-size: 18px;
-    font-weight: 400;
+.full-width {
+    width: 100vw;
+    margin-left: -50vw;
+    left: 50%;
 }
 
 .intro-header {
     padding-top: 50px; /* If you're making other pages, make sure there is 50px of padding to make sure the navbar doesn't overlap content! */
     padding-bottom: 50px;
     text-align: center;
-    color: #f8f8f8;
-    background: url(../img/intro-bg.jpg) no-repeat center center;
+    background: url(../img/atl-bw.jpg) no-repeat center center;
+    /*-webkit-filter: blur(10px);*/
+    opacity: 0.8;
     background-size: cover;
+    max-width: 100%;
+    max-height: 100%;
 }
 
 .intro-message {
-    position: relative;
-    padding-top: 20%;
-    padding-bottom: 20%;
+    /*position: relative;*/
+    margin-top: 10%;
+    margin-bottom: 15%;
+    padding-top: 1%;
+    padding-bottom: 1%;
+    text-align: center;
+    background-color: rgba(0, 0, 0, 0.85);
+
 }
 
 .intro-message > h1 {
@@ -51,16 +56,44 @@ h6 {
     font-size: 5em;
 }
 
+.intro-message > h2 {
+    color: rgb(255, 255, 255);
+}
+
 .intro-divider {
     width: 400px;
     border-top: 1px solid #f8f8f8;
     border-bottom: 1px solid rgba(0,0,0,0.2);
 }
 
-.intro-message > h3 {
-    text-shadow: 2px 2px 3px rgba(0,0,0,0.6);
+.event-info {
+    background-color: #ffffff;
 }
 
+.graph > img {
+    max-width: 80%;
+}
+
+.info-message {
+    color: rgb(88, 88, 88);
+    text-align: center;
+
+}
+
+.sponsors {
+    background-color: #45CECD;
+    height: 300px;
+
+}
+
+.sponsor-message {
+    color: rgb(255, 255, 255);
+    text-align: center;
+}
+
+.footer-text {
+    text-align: center;
+}
 @media(max-width:767px) {
     .intro-message {
         padding-bottom: 15%;
