--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,8 @@ h6 {
     font-weight: 700;
 }
 
+
+
 .full-width {
     width: 100vw;
     margin-left: -50vw;
@@ -37,6 +39,10 @@ h6 {
     background-size: cover;
     max-width: 100%;
     max-height: 100%;
+}
+
+.nav-bar p {
+    color: #ffffff;
 }
 
 .intro-message {
@@ -59,7 +65,14 @@ h6 {
 .intro-message > h2 {
     color: rgb(255, 255, 255);
 }
-
+.pitches-logo {
+    width: 40%;
+    height: 40%;
+}
+.sx-logo {
+    width:5%;
+    height:5%;
+}
 .intro-divider {
     width: 400px;
     border-top: 1px solid #f8f8f8;
@@ -71,7 +84,7 @@ h6 {
 }
 
 .graph > img {
-    max-width: 80%;
+    max-width: 60%;
 }
 
 .info-message {
@@ -82,14 +95,23 @@ h6 {
 
 .sponsors {
     background-color: #45CECD;
-    height: 300px;
+    overflow:auto;
+    padding-bottom: 5%;
 
 }
 
-.sponsor-message {
+.sponsors h3{
     color: rgb(255, 255, 255);
     text-align: center;
 }
+
+
+.sponsors img {
+    top:50%;
+    left:50%;
+    max-width: 50%;
+}
+
 
 .footer-text {
     text-align: center;
